--- a/style.css
+++ b/style.css
@@ -1,9 +1,71 @@
-body {
-    margin: 0px;
-    padding: 0px;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+
+body {
     font-family: 'Bree Serif', serif;
 }
+
+.header {
+    width: 100%;
+    height: 100px;
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    background-color: rgb(241, 248, 255);
+    position: relative;
+}
+
+.header a:hover {
+    text-decoration: underline;
+}
+
+.register__content a {
+    text-decoration: none;
+    color: black;
+}
+
+.register__content {
+    display: flex;
+    gap: 25px;
+    font-size: 20px;
+}
+
+.card__containers p {
+    font-size: 16px;
+}
+
+.card__containers .card-price p {
+    font-size: 22px;
+}
+
+.card__containers img {
+    width: 25%;
+}
+
+.content__header ol {
+    display: flex;
+    list-style: none;
+    gap: 50px;
+}
+
+.content__header li {
+    font-size: 25px;
+}
+
+.content__header a {
+    text-decoration: none;
+    color: black;
+}
+
+#burgerOpen {
+    display: none;
+    position: absolute;
+    left: 10%;
+}
+
 
 .fon {
     position: relative;
@@ -15,7 +77,7 @@ body {
 
 .text {
     position: absolute;
-    top: 5%;
+    top: 10%;
     left: 47%;
     text-transform: uppercase;
     font-size: 20px;
@@ -34,6 +96,33 @@ body {
     transition: 2s;
 }
 
+.burger__text {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    /* padding: 20px; */
+}
+
+.burger__content li {
+    padding: 30px;
+    font-size: 25px;
+    text-align: center;
+    list-style: none;
+}
+
+.burger__content a {
+    text-decoration: none;
+    color: rgb(98, 98, 98);
+}
+
+.burger__content a:hover {
+    background-color: #a4a4a420;
+    border-bottom: 1px solid rgb(98, 98, 98);
+    border-top: 1px solid rgb(98, 98, 98);
+    transition: all 1s ease;
+}
 
 .card__containers {
     display: flex;
@@ -50,15 +139,16 @@ body {
     text-align: center;
     justify-content: center;
     width: 49%;
+    gap: 15px;
     margin-top: 100px;
-    transform: translateY(60px);
-    transition: 2s;
+    transform: translateY(45px);
+    transition: 1.2s;
 }
 
 .card-container:hover {
     border-bottom: 3px solid black;
-    transform: translateY(-60px);
-    transition: 2s;
+    transform: translateY(-45px);
+    transition: 1.2s;
 }
 
 .card-discr {
@@ -112,7 +202,7 @@ body {
     width: 25%;
 } 
 
-#buy {
+.card__button button {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-transform: uppercase;
     padding: 10px 12px;
@@ -224,6 +314,7 @@ button:active {
     transform: translate(-50%, -50%);
     width: 600px;
     height: 700px;
+    overflow-y: auto;
     background-color: #ffffff;
 }
 
@@ -249,6 +340,35 @@ button:active {
     transform: translateY(-15px);
     transition: 1s; 
     border-bottom: 2px solid black;
+}
+
+.burger__container {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.burger__content {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    width: 350px;
+    height: 100%;
+    overflow-y: auto;
+    background-color: #ffffff;
+    border-radius: 10% 0 0 10%;
+}
+
+.header img {
+    width: 40px;
+    height: 40px;
 }
 
 .order__modal {
@@ -317,14 +437,6 @@ button:active {
     padding: 0px;
 }
 
-.aaaaaaaaaaaaaaaaaaaaa {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: wrap;    
-    height: 100%;
-}
-
 .links {
     display: flex;
     text-align: center;
@@ -347,6 +459,24 @@ button:active {
     transition: 1s;
 }
 
+.basket__add {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    gap: 20px;
+    padding: 10px;
+}
+
+.basket__add h2, p {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.basket__add img {
+    width: 20%;
+} 
+
 @media screen and (max-width: 1000px) {
     .card-container {
         width: 100%;
@@ -354,11 +484,24 @@ button:active {
     }
 
     .text {
-        top: 0;
-        left: 50%;
+        top: 10%;
+        left: 45%;
+    }
+
+    .first {
+        display: none;
     }
 }
 
+@media screen and (max-width: 850px) {
+    .content__header {
+        display: none;
+    }
+
+    #burgerOpen {
+        display: block;
+    }
+}
 @media screen and (max-width: 651px) {
     .card-container {
         width: 100%;
@@ -374,8 +517,8 @@ button:active {
         padding: 0px;
     }
 
-    .card-image img {
-        width: 40%;
+    .card-container img {
+        width: 35%;
     }
 
     .first {
@@ -383,8 +526,22 @@ button:active {
     }
 
     .basket__content {
-        width: 480px;
-        height: 800px;
+        left: 27%;
+        width: 350px;
+        height: 100%;
+        border-radius: 0% 10% 10% 0%;
+    }
+
+    .slider-text {
+        display: none;
+    }
+
+    .slider-line {
+        width: 1500px;
+    }
+
+    .burger__content li {
+        font-size: 22px;
     }
 }
 
@@ -413,16 +570,16 @@ button:active {
     }
     
     .text {
-        left: 42%;
-        top: 1%;
+        left: 40%;
+        top: 14%;
     }
 
     .card-discr {
         padding: 0px;
     }
 
-    .card-image img {
-        width: 60%;
+    .card-container img {
+        width: 35%;
     }
 
     .slider-text {
@@ -436,7 +593,13 @@ button:active {
     }
 
     .basket__content {
-        width: 370px;
-        height: 850px;
+        left: 30%;
+        width: 250px;
+        height: 100%;
+    }
+
+    .burger__content li {
+        text-align: left;
+        font-size: 18px;
     }
 }
